--- a/config
+++ b/config
@@ -253,7 +253,7 @@ bindsym $mod+q			[con_id="__focused__" instance="^(?!dropdowncalc|tmuxdd).*$"] k
 bindsym $mod+Shift+q		[con_id="__focused__" instance="^(?!dropdowncalc|tmuxdd).*$"] kill
 
 # bindsym $mod+w			exec $term -e nmtui
-bindsym $mod+Shift+w		exec --no-startup-id $CHROME
+bindsym $mod+Shift+w		exec --no-startup-id $BROWSER
 bindsym $mod+Shift+f		exec --no-startup-id $FIREFOX
 
 bindsym $mod+e			exec $term -e neomutt && pkill -RTMIN+12 i3blocks
