--- a/config
+++ b/config
@@ -55,6 +55,7 @@ exec --no-startup-id unclutter
 exec_once --no-startup-id notify-send "Start barrier [KVM]" 
 exec_once --no-startup-id barrier
 exec_once --no-startup-id flameshot
+exec_once --no-startup-id echocancel
 # Run the script to update the mpd i3block on change.
 #exec_always --no-startup-id mpdupdate
 # mpd startup
@@ -113,7 +114,7 @@ bar {
 
 set $ws1 "1"
 set $ws2 "2"
-set $ws3 "3:game"
+set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5:media"
 set $ws6 "6"
