switch from dmenu to rofi, use xtitle is i3blocks

--- a/config
+++ b/config
@@ -66,29 +66,29 @@ exec_once --no-startup-id echocancel
 # exec --no-startup-id ~/.screenlayout/init.sh
 
 # Set Xresources colors:
-set_from_resource $darkblack	color0  #000000
-set_from_resource $black	color8  #000000
-set_from_resource $darkred	color1  #000000
-set_from_resource $red		color9  #000000
-set_from_resource $darkgreen	color2  #000000
-set_from_resource $green	color10 #000000
-set_from_resource $darkyellow	color3  #000000
-set_from_resource $yellow	color11 #000000
-set_from_resource $darkblue	color4  #000000
-set_from_resource $blue		color12 #000000
-set_from_resource $darkmagenta	color5  #000000
-set_from_resource $magenta	color13 #000000
-set_from_resource $darkcyan	color6  #000000
-set_from_resource $cyan		color14 #000000
-set_from_resource $darkwhite	color7  #000000
-set_from_resource $white	color15 #000000
-set $transparent		#00000000
+set_from_resource $darkblack    color0  #000000
+set_from_resource $black        color8  #000000
+set_from_resource $darkred      color1  #000000
+set_from_resource $red          color9  #000000
+set_from_resource $darkgreen    color2  #000000
+set_from_resource $green        color10 #000000
+set_from_resource $darkyellow   color3  #000000
+set_from_resource $yellow       color11 #000000
+set_from_resource $darkblue     color4  #000000
+set_from_resource $blue         color12 #000000
+set_from_resource $darkmagenta  color5  #000000
+set_from_resource $magenta      color13 #000000
+set_from_resource $darkcyan     color6  #000000
+set_from_resource $cyan         color14 #000000
+set_from_resource $darkwhite    color7  #000000
+set_from_resource $white        color15 #000000
+set $transparent                        #00000000
 
-#                       BORDER       	 BACKGROUND   TEXT      INDICATOR     CHILD_BORDER
-client.focused          $red         	 $red         $white    $darkmagenta  $darkred
-client.unfocused        $transparent 	 $blue        $white    $darkblue     $darkblack
-client.focused_inactive $transparent 	 $darkgreen   $white    $darkblue     $darkblack
-client.urgent           $darkred     	 $darkred     $black    $darkred      $darkgreen
+#                       BORDER        BACKGROUND   TEXT      INDICATOR     CHILD_BORDER
+client.focused          $red          $red         $white    $darkmagenta  $darkred
+client.unfocused        $transparent  $blue        $white    $darkblue     $darkblack
+client.focused_inactive $transparent  $darkgreen   $white    $darkblue     $darkblack
+client.urgent           $darkred      $darkred     $black    $darkred      $darkgreen
 client.background       $black
 
 bar {
@@ -238,7 +238,8 @@ bindsym $mod+Shift+Escape 	exec --no-startup-id prompt "Exit i3?" "i3-msg exit"
 # bindsym $mod+BackSpace
 bindsym $mod+Shift+BackSpace	exec --no-startup-id prompt "Reboot computer?" "$reboot"
 
-bindsym $mod+grave		exec --no-startup-id dmenuunicode
+# bindsym $mod+grave		exec --no-startup-id dmenuunicode
+bindsym $mod+grave		exec --no-startup-id rofimoji
 ##bindsym $mod+asciitilde
 
 #STOP/HIDE EVERYTHING:
@@ -257,8 +258,8 @@ bindsym $mod+Shift+q		[con_id="__focused__" instance="^(?!dropdowncalc|tmuxdd).*
 bindsym $mod+Shift+w		exec --no-startup-id $BROWSER
 bindsym $mod+Shift+f		exec --no-startup-id $FIREFOX
 
-bindsym $mod+e			exec $term -e neomutt && pkill -RTMIN+12 i3blocks
-bindsym $mod+Shift+e		exec --no-startup-id tutorialvids
+# bindsym $mod+e			exec $term -e neomutt && pkill -RTMIN+12 i3blocks
+# bindsym $mod+Shift+e		exec --no-startup-id tutorialvids
 
 bindsym $mod+r 			exec $term -e vifm
 bindsym $mod+Shift+r	exec --no-startup-id winresize
@@ -270,25 +271,26 @@ bindsym $mod+Shift+t	exec --no-startup-id topright
 bindsym $mod+y			exec $term -e calcurse
 #bindsym $mod+Shift+y
 
-bindsym $mod+u			exec --no-startup-id ddspawn tmuxdd
+# bindsym $mod+u			exec --no-startup-id ddspawn tmuxdd
 #bindsym $mod+Shift+u
 
-bindsym $mod+i 			exec $term -e htop
+# bindsym $mod+i 			exec $term -e htop
 #bindsym $mod+Shift+i
 
 bindsym $mod+o			sticky toggle
 #bindsym $mod+Shift+o
 
-bindsym $mod+p			exec --no-startup-id lmc toggle
-bindsym $mod+Shift+p	exec --no-startup-id lmc pause
+# bindsym $mod+p			exec --no-startup-id lmc toggle
+# bindsym $mod+Shift+p	exec --no-startup-id lmc pause
 
-bindsym $mod+a			exec --no-startup-id ddspawn dropdowncalc -f mono:pixelsize=24
+# bindsym $mod+a			exec --no-startup-id ddspawn dropdowncalc -f mono:pixelsize=24
 bindsym $mod+Shift+a	exec $term -e pulsemixer
 
 # bindsym $mod+s			gaps inner current plus 5
 # bindsym $mod+Shift+s	gaps inner current minus 5
 
-bindsym $mod+d			exec --no-startup-id dmenu_run
+# bindsym $mod+d			exec --no-startup-id dmenu_run
+bindsym $mod+d			exec --no-startup-id  rofi -show combi
 # bindsym $mod+Shift+d	gaps inner current set 0; gaps outer current set 0
 
 bindsym $mod+f			fullscreen toggle
@@ -318,7 +320,7 @@ bindsym $mod+Ctrl+l		exec --no-startup-id i3resize right
 bindsym $mod+x			exec --no-startup-id lockscreen
 bindsym $mod+Shift+x	exec --no-startup-id prompt "Shutdown computer?" "$shutdown"
 
-#bindsym $mod+c
+bindsym $mod+c			exec --no-startup-id rofi -show calc
 bindsym $mod+Shift+c	exec --no-startup-id camtoggle
 
 #bindsym $mod+v
@@ -327,11 +329,11 @@ bindsym $mod+Shift+c	exec --no-startup-id camtoggle
 bindsym $mod+b			bar mode toggle
 bindsym $mod+Shift+b	floating toggle; sticky toggle; exec --no-startup-id bottomleft
 
-bindsym $mod+n			exec $term -e newsboat && pkill -RTMIN+6 i3blocks
+# bindsym $mod+n			exec $term -e newsboat && pkill -RTMIN+6 i3blocks
 bindsym $mod+Shift+n	floating toggle; sticky toggle; exec --no-startup-id bottomright
 
 # bindsym $mod+m 			exec --no-startup-id $term -e ncmpcpp
-bindsym $mod+Shift+m	exec --no-startup-id lmc mute
+# bindsym $mod+Shift+m	exec --no-startup-id lmc mute
 
 
 # #---Workspace Bindings---# #
@@ -358,11 +360,11 @@ bindsym $mod+slash		workspace back_and_forth
 # #---Function Buttons---# #
 bindsym $mod+F1		exec --no-startup-id groff -kejpt -mom ~/.readme.mom -Tpdf | zathura -
 bindsym $mod+F2		restart
-bindsym $mod+F3		exec --no-startup-id displayselect
+# bindsym $mod+F3		exec --no-startup-id displayselect
 bindsym $mod+F4		exec --no-startup-id prompt "Hibernate computer?" "$hibernate"
 bindsym $mod+F5		exec --no-startup-id $netrefresh
 # bindsym $mod+F6		exec --no-startup-id $term -e transmission-remote-cli
-bindsym $mod+F7		exec --no-startup-id ~/bin/spotifyd-no-daemon
+# bindsym $mod+F7		exec --no-startup-id ~/bin/spotifyd-no-daemon
 bindsym $mod+F8		exec --no-startup-id ~/bin/droicam-lister
 # bindsym $mod+F9		exec --no-startup-id dmenumount
 # bindsym $mod+F10	exec --no-startup-id dmenuumount
@@ -371,11 +373,11 @@ bindsym $mod+F8		exec --no-startup-id ~/bin/droicam-lister
 # bindsym $mod+F9		exec --no-startup-id lmc mute
 # bindsym $mod+F10	exec --no-startup-id lmc down 5
 # bindsym $mod+F11	exec --no-startup-id lmc up 5
-bindsym $mod+F9		exec --no-startup-id mypctl --mute
+# bindsym $mod+F9		exec --no-startup-id mypctl --mute
 bindsym Shift+$mod+F9		exec --no-startup-id mypctl --max
 bindsym Control+$mod+F9		exec --no-startup-id mypctl --normal
-bindsym $mod+F10	exec --no-startup-id mypctl --down
-bindsym $mod+F11	exec --no-startup-id mypctl --up
+bindsym $mod+F9	    exec --no-startup-id mypctl --down
+bindsym $mod+F10	exec --no-startup-id mypctl --up
 
 
 # #---Arrow Keys---# #
