--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -2,6 +2,13 @@ command=~/.config/i3/scripts/statusbar/$BLOCK_NAME
 separator_block_width=15
 markup=pango
 
+[window]
+command=xtitle -s
+align=start
+interval=persist
+separator=false
+separator_block_width=75
+
 [record]
 command=cat ~/.recordingicon
 interval=once
