polishing top bar, style, layout, fixes

--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -2,73 +2,57 @@ command=~/.config/i3/scripts/statusbar/$BLOCK_NAME
 separator_block_width=15
 markup=pango
 
-[window]
-command=xtitle -s
-align=start
-interval=persist
+[window title]
+command=xdotool getactivewindow getwindowname
+interval=1
+min_width=1300
+align=center
 separator=false
-separator_block_width=75
-
-[record]
-command=cat ~/.recordingicon
-interval=once
-signal=9
-
-# [music]
-# label=🎼
-# interval=once
-# signal=11
-
-# [news]
-# label=📰
-# interval=once
-# signal=6
-
-# [weather]
-# interval=3600
-
-# [mailbox]
-# label=📬
-# interval=180
-# signal=12
 
 [memory]
 full_text="$BLOCK_NAME"
 interval=30
-label=🧠
+label= 
+separator=false
 
 [cpu]
 full_text="$BLOCK_NAME"
 interval=15
 label=💻
+separator=false
 
 [disk]
 ALERT_LOW=20
 DIR=/
 command=disk
 interval=60
-label=🏤
+label=💽🥇
+separator=false
 
 [disk]
 ALERT_LOW=10
 DIR=/home/undg/
 command=disk
 interval=60
-label=🏠
+label=💽🏡
+separator=false
 
 [disk]
 ALERT_LOW=5
 DIR=/home/undg/Storage/
 command=disk
 interval=60
-label=🏬
+label=💽🥉
+separator=false
 
 [clock]
 interval=30
-label=📅
+label=⏳
+separator=false
 
 [internet]
 interval=10
+separator=false
 
 [battery]
 command=battery BAT0
@@ -83,8 +67,5 @@ interval=21600
 label=📦
 signal=8
 
-
-# [help]
-# interval=once
 
 # vim: ft=sh
