--- a/config
+++ b/config
@@ -98,7 +98,8 @@ bar {
     position top
     mode dock
     modifier None
-    font pango:mono 10
+    font pango:DejaVu Sans Mono, Icons 12
+
     colors {
             background $darkblack
             statusline $darkwhite
