--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -12,7 +12,7 @@ separator=false
 [memory]
 full_text="$BLOCK_NAME"
 interval=30
-label= 
+label=📈 
 separator=false
 
 [cpu]
@@ -47,7 +47,7 @@ separator=false
 
 [clock]
 interval=30
-label=⏳
+label=⏰
 separator=false
 
 [internet]
@@ -59,7 +59,7 @@ command=battery BAT0
 interval=5
 
 [volume]
-interval=once
+interval=1
 signal=10
 
 [pacpackages]
