--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -17,10 +17,10 @@ signal=9
 # interval=once
 # signal=6
 
-[pacpackages]
-interval=once
-label=📦
-signal=8
+# [pacpackages]
+# interval=once
+# label=📦
+# signal=8
 
 # [torrent]
 # interval=20
@@ -49,26 +49,26 @@ label=💻
 #LABEL=HOhE 
 #interval=60
 
-[disk]
-ALERT_LOW=20
-DIR=/
-command=disk
-interval=60
-label=💽
+# [disk]
+# ALERT_LOW=20
+# DIR=/
+# command=disk
+# interval=60
+# label=💽
 
-[disk]
-ALERT_LOW=10
-DIR=/home/undg/
-command=disk
-interval=60
-label=🏠
+# [disk]
+# ALERT_LOW=10
+# DIR=/home/undg/
+# command=disk
+# interval=60
+# label=🏠
 
-[disk]
-ALERT_LOW=5
-DIR=/home/undg/Storage/
-command=disk
-interval=60
-label=🏪
+# [disk]
+# ALERT_LOW=5
+# DIR=/home/undg/Storage/
+# command=disk
+# interval=60
+# label=🏪
 
 [clock]
 interval=30
