Remove more unused bindings

--- a/config
+++ b/config
@@ -23,7 +23,7 @@ focus_follows_mouse no
 
 
 # #---Basic Definitions---# #
-for_window [class="^.*"] border pixel 7
+for_window [class="^.*"] border pixel 4
 
 set $term --no-startup-id $TERMINAL
 set $mod Mod4
@@ -45,7 +45,6 @@ exec_always --no-startup-id feh --bg-scale ~/.config/i3/wallpaper/dog.jpg # wall
 exec --no-startup-id unclutter                                            # hide mouse after a brief period
 exec --no-startup-id echocancel                                           # pulse mixer echo cancelation
 exec --no-startup-id dunst                                                # notifications
-exec --no-startup-id remaps                                               # Runs the key remapping scripts
 exec --no-startup-id barrier                                              # KVM software
 exec --no-startup-id flameshot                                            # screenshots
 
@@ -235,7 +234,7 @@ bindsym $mod+Shift+w         exec --no-startup-id $BROWSER
 bindsym $mod+Shift+f         exec --no-startup-id $FIREFOX
 #bindsym $mod+e
 #bindsym $mod+Shift+e
-bindsym $mod+r               exec $term -e vifm
+#bindsym $mod+r
 bindsym $mod+Shift+r         exec --no-startup-id winresize
 bindsym $mod+t               split toggle
 bindsym $mod+Shift+t         exec --no-startup-id topright
@@ -243,7 +242,7 @@ bindsym $mod+Shift+t         exec --no-startup-id topright
 #bindsym $mod+Shift+y
 #bindsym $mod+u
 #bindsym $mod+Shift+u
-bindsym $mod+i               exec $term -e htop
+#bindsym $mod+i
 #bindsym $mod+Shift+i
 bindsym $mod+o               sticky toggle
 #bindsym $mod+Shift+o
@@ -253,9 +252,8 @@ bindsym $mod+a               exec --no-startup-is pavucontrol
 bindsym $mod+Shift+a         exec $term -e pulsemixer
 #bindsym $mod+s
 #bindsym $mod+Shift+s
-#bindsym $mod+d              exec --no-startup-id dmenu_run
 bindsym $mod+d               exec --no-startup-id  rofi -show combi
-#bindsym $mod+Shift+d        gaps inner current set 0; gaps outer current set 0
+#bindsym $mod+Shift+d
 bindsym $mod+f               fullscreen toggle
 bindsym $mod+g               workspace prev
 #bindsym $mod+Shift+g
@@ -271,12 +269,12 @@ bindsym $mod+Ctrl+k          exec --no-startup-id i3resize up
 bindsym $mod+l               focus right
 bindsym $mod+Shift+l         move right 30
 bindsym $mod+Ctrl+l          exec --no-startup-id i3resize right
-#bindsym $mod+z              gaps outer current plus 5
-#bindsym $mod+Shift+z        gaps outer current minus 5
+#bindsym $mod+z
+#bindsym $mod+Shift+z
 bindsym $mod+x               exec --no-startup-id lockscreen
 bindsym $mod+Shift+x         exec --no-startup-id prompt "Shutdown computer?" "$shutdown"
-bindsym $mod+c               exec --no-startup-id rofi -show calc
-bindsym $mod+Shift+c         exec --no-startup-id camtoggle
+# bindsym $mod+c
+# bindsym $mod+Shift+c
 #bindsym $mod+v
 #bindsym $mod+Shift+v
 bindsym $mod+b               bar mode toggle
